# sahaja-library

./: .gitignore  DEV-README.md  Makefile  cookiecutter-config-file.yml  docker-compose.dev.build.yml  docker-compose.dev.command.yml  docker-compose.dev.ports.yml  docker-compose.dev.volumes.yml  docker-compose.dev.yml  docker-compose.local.yml  docker-compose.shared.depends.yml  docker-compose.shared.env.yml  docker-compose.yml  notes.md  readme.md
api-backend/: .dockerignore  .gitignore  Dockerfile  manage.py  models.py  pyproject.toml
api-backend/core/: date_parser.py  models.py
api-backend/modules/catalog/: filters.py  serializers.py  sitemaps.py  urls.py  views.py
api-backend/modules/catalog/services/: lection_service.py  years_service.py
api-backend/modules/core/: admin.py  exports.py  models.py  pagination.py  serializers.py  sitemaps.py
api-backend/modules/core/migrations/: 0001_initial.py  0002_lection_is_lection_lection_is_verified.py  0003_lection_is_meta.py
api-backend/modules/search/: apps.py  models.py  urls.py  views.py
api-backend/modules/search/query/: lection.py  stored_procedures.py
api-backend/modules/search/services/: date_parser.py  embeddings_service.py  search_service.py
api-backend/sahajalib/: asgi.py  settings.py  sitemaps.py  urls.py  wsgi.py
backend/: backend.dockerfile  celeryworker.dockerfile  tests.dockerfile
database/: .gitignore  postgres.dockerfile
docker/: docker-compose.deploy.build.yml  docker-compose.deploy.volumes-placement.yml  docker-compose.dev.build.yml  docker-compose.dev.ports.yml  docker-compose.test.yml  (+5 more)
(+106 files in other folders)
